pw-portfolio: figured out the splitting of the slideshows

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3945,8 +3945,7 @@ body {
 
 /*================ Index Template Styles ================*/
 .template-index,
-#home,
-#portfolio {
+#home {
   max-height: 100vh;
   overflow: hidden;
 }
