--- a/assets/theme.js.liquid
+++ b/assets/theme.js.liquid
@@ -1593,11 +1593,14 @@ var slickTheme = (function(module, $) {
      *   - https://github.com/kenwheeler/slick/#options
      */
     settings.$element.slick({
+      arrows         : settings.arrows,
+      dots           : settings.dots,
       adaptiveHeight : settings.fullscreen ? false : settings.adaptiveHeight,
       draggable      : false,
       fade           : true,
       //autoplay       : theme.strings.slickAuto,
       //autoplaySpeed  : theme.strings.slickAutoSpeed,
+      autoplay       : slickTheme.cache.$hero.data('autoplay'),
       autoplaySpeed  : slickTheme.cache.$hero.data('autoplayspeed'),
       onInit         : this.onInit,
       onBeforeChange : this.beforeChange,
@@ -1746,6 +1749,232 @@ var slickTheme = (function(module, $) {
   return module;
 
 }(slickTheme || {}, jQuery));
+
+var slickThemePortfolio = (function(module, $) {
+  'use strict';
+
+  // Public functions
+  var init, onInit, beforeChange, afterChange;
+
+  // Private variables
+  var settings, $slider, $allSlides, $activeSlide, $slickDots, windowHeight, scrolled, $heroText, $heroImage;
+  var currentActiveSlide = 0;
+
+  // Private functions
+  var cacheObjects, checkFirstOnIndex, setFullScreen, sizeFullScreen, setParallax, calculateParallax, slickColors, fixIE8;
+
+  /*============================================================================
+   Initialise the plugin and define global options
+  ==============================================================================*/
+  cacheObjects = function () {
+    slickThemePortfolio.cache = {
+      $html      : $('html'),
+      $window    : $(window),
+      $hero      : $('#Hero'),
+      $heroImage : $('.hero__image'),
+      $headerWrapper: $('.header-wrapper')
+    };
+
+    slickThemePortfolio.vars = {
+      slideClass      : 'slick-slide',
+      activeClass     : 'slick-active',
+      hiddenClass     : 'hero__slide--hidden',
+      heroHeaderClass : 'hero__header'
+    };
+  };
+
+  init = function (options) {
+    cacheObjects();
+
+    // Default settings
+    settings = {
+      // User options
+      $element       : null,
+      fullscreen     : false,
+      parallax       : false,
+
+      // Private settings
+      isTouch        : Modernizr.touch ? true : false,
+
+      // Slack options
+      arrows         : false,
+      dots           : true,
+      adaptiveHeight : true
+    };
+
+    // Override defaults with arguments
+    $.extend(settings, options);
+
+    // Check if this hero is the first one on the home page
+    settings.isFirstOnIndex = checkFirstOnIndex();
+
+    // Absolutely position header over hero as soon as possible
+    if (settings.isFirstOnIndex) {
+      slickThemePortfolio.cache.$headerWrapper.addClass(slickThemePortfolio.vars.heroHeaderClass);
+    }
+
+    /*
+     * Init slick slider
+     *   - Add any additional option changes here
+     *   - https://github.com/kenwheeler/slick/#options
+     */
+    settings.$element.slick({
+      arrows         : true,
+      dots           : settings.dots,
+      adaptiveHeight : settings.fullscreen ? false : settings.adaptiveHeight,
+      draggable      : false,
+      fade           : true,
+      //autoplay       : theme.strings.slickAuto,
+      //autoplaySpeed  : theme.strings.slickAutoSpeed,
+      autoplay       : slickThemePortfolio.cache.$hero.data('autoplay'),
+      autoplaySpeed  : slickThemePortfolio.cache.$hero.data('autoplayspeed'),
+      onInit         : this.onInit,
+      onBeforeChange : this.beforeChange,
+      onAfterChange  : this.afterChange
+    });
+  };
+
+  checkFirstOnIndex = function () {
+    if (settings.$element.hasClass('hero--first')) {
+      return true;
+    };
+
+    return false;
+  };
+
+  onInit = function (obj) {
+    $slider = obj.$slider;
+    $allSlides = $slider.find('.' + slickThemePortfolio.vars.slideClass);
+    $activeSlide = $slider.find('.' + slickThemePortfolio.vars.activeClass);
+    $slickDots = $slider.find('.slick-dots');
+
+    if (!settings.isTouch) {
+      $allSlides.addClass(slickThemePortfolio.vars.hiddenClass);
+      $activeSlide.removeClass(slickThemePortfolio.vars.hiddenClass);
+    }
+
+    if (settings.fullscreen) {
+      setFullScreen();
+      slickColors();
+
+      if (slickThemePortfolio.cache.$html.hasClass('lt-ie9')) {
+        fixIE8();
+      }
+    }
+
+    if (settings.parallax && Modernizr.csstransforms3d) {
+      setParallax();
+    }
+  };
+
+  beforeChange = function (evt, currentSlide, nextSlide) {
+    if (settings.fullscreen) {
+      var $nextSlide = $allSlides.eq(nextSlide),
+          newTextColor = $nextSlide.data('color');
+
+      slickColors(newTextColor);
+    }
+
+    if (!settings.isTouch) {
+      $allSlides.removeClass(slickThemePortfolio.vars.hiddenClass);
+    }
+
+    // Set upcoming slide as index
+    currentActiveSlide = nextSlide;
+
+    // Set new active slide to proper parallax position
+    if (settings.parallax && Modernizr.csstransforms3d) {
+      calculateParallax(settings.fullscreen, currentActiveSlide);
+    }
+  };
+
+  afterChange = function (evt, currentSlide) {
+    if (!settings.isTouch) {
+      $activeSlide = $slider.find('.' + slickTheme.vars.activeClass);
+      $allSlides.addClass(slickTheme.vars.hiddenClass);
+      $activeSlide.removeClass(slickTheme.vars.hiddenClass);
+    }
+  };
+
+  setFullScreen = function () {
+    sizeFullScreen();
+
+    // Resize hero after screen resize
+    slickThemePortfolio.cache.$window.resize(function () {
+      afterResize(function() {
+        sizeFullScreen();
+      }, 200, 'sizeFullScreen');
+    });
+  };
+
+  sizeFullScreen = function () {
+    windowHeight = slickTheme.cache.$window.height();
+    settings.$element.css('height', windowHeight);
+  };
+
+  setParallax = function () {
+    $heroText = $('.hero__text-content');
+    $heroImage = $('.hero__image');
+
+    slickThemePortfolio.cache.$window.on('scroll', function(evt) {
+      calculateParallax(settings.fullscreen, currentActiveSlide);
+    });
+  };
+
+  calculateParallax = function (parallaxImage, currentSlide) {
+    scrolled = slickThemePortfolio.cache.$window.scrollTop();
+
+    $($heroText[currentSlide]).css({
+      transform: 'translate3d(0, '+ scrolled / 8 +'px, 0)'
+    })
+
+    if (parallaxImage) {
+      $($heroImage[currentSlide]).css({
+        transform: 'translate3d(0, '+ scrolled / 8 +'px, 0)'
+      })
+    }
+  };
+
+  slickColors = function (color) {
+    // Find the new color if one isn't sent
+    if (!color) {
+      var color = $('.slick-active').attr('data-color');
+    }
+
+    // Set an is-light or is-dark class on the header and nav dots to update colors
+    if (settings.isFirstOnIndex) {
+      slickTheme.cache.$headerWrapper.removeClass('is-light is-dark').addClass(color);
+    }
+
+    // Set an is-light or is-dark class on nav dots to update colors
+    if ($slickDots.length) {
+      $slickDots.removeClass('is-light is-dark').addClass(color);
+    }
+  };
+
+  fixIE8 = function () {
+    // Add an -ms- filter to make background-size: cover (mostly) work
+    slickThemePortfolio.cache.$heroImage.each(function() {
+      var $el = $(this),
+          img = $el.attr('data-image');
+
+      $el.css({
+        'background-image': 'none',
+        'filter': 'progid:DXImageTransform.Microsoft.AlphaImageLoader(src="' + img + '", sizingMethod="scale")'
+        });
+    });
+  };
+
+  module = {
+    init: init,
+    onInit: onInit,
+    beforeChange: beforeChange,
+    afterChange: afterChange
+  };
+
+  return module;
+
+}(slickThemePortfolio || {}, jQuery));
 
 /* ================ Sections ================ */
 window.theme = window.theme || {};
@@ -2293,7 +2522,6 @@ theme.SlideshowSection = (function() {
   function SlideshowSection(container) {
 
     theme.initCache();
-
     var $container = this.$container = $(container);
     var sectionId = $container.attr('data-section-id');
     var slideshow = this.slideshow = '#Hero';
@@ -2301,14 +2529,12 @@ theme.SlideshowSection = (function() {
     //var autoplay = $(this.slideshow).attr('data-autoplayspeed');
 
     slickTheme.init({
-      $element     : $('.hero-slideshow-landing'),
+      $element     : $(slideshow),
       fullscreen   : $(slideshow).data('fullscreen'),
       parallax     : $(slideshow).data('parallax'),
       autoplay       : $(slideshow).data('autoplay'),
       autoplaySpeed  : $(slideshow).data('autoplayspeed')
     });
-
-    console.log(slideshow);
 
     // remove header absolute display if slideshow is empty
     if (!$(this.slideshow).hasClass('hero')) {
@@ -2317,6 +2543,34 @@ theme.SlideshowSection = (function() {
   }
 
   return SlideshowSection;
+})();
+
+theme.SlideshowSectionPortfolio = (function() {
+
+  function SlideshowSectionPortfolio(container) {
+
+    theme.initCache();
+    var $container = this.$container = $(container);
+    var sectionId = $container.attr('data-section-id');
+    var slideshow = this.slideshow = '#Hero-Portfolio';
+    //var autoplay = $(this.slideshow).attr('data-autoplay');
+    //var autoplay = $(this.slideshow).attr('data-autoplayspeed');
+
+    slickThemePortfolio.init({
+      $element     : $(slideshow),
+      fullscreen   : $(slideshow).data('fullscreen'),
+      parallax     : $(slideshow).data('parallax'),
+      autoplay       : $(slideshow).data('autoplay'),
+      autoplaySpeed  : $(slideshow).data('autoplayspeed')
+    });
+
+    // remove header absolute display if slideshow is empty
+    if (!$(this.slideshow).hasClass('hero')) {
+      $('.header-wrapper').removeClass('hero__header is-light is-dark');
+    }
+  }
+
+  return SlideshowSectionPortfolio;
 })();
 
 theme.SlideshowSection.prototype = _.assignIn({}, theme.SlideshowSection.prototype, {
@@ -2650,5 +2904,6 @@ $(document).ready(function() {
   sections.register('header-section', theme.HeaderSection);
   sections.register('featured-content-section', theme.FeaturedContentSection);
   sections.register('slideshow-section', theme.SlideshowSection);
+  sections.register('slideshow-section', theme.SlideshowSectionPortfolio);
   sections.register('password-header', theme.PasswordHeader);
 });
