--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2110,10 +2110,12 @@ $shareCountBg: $colorBody;
 
   .slick-prev {
     left: 0;
+    padding-left: 15px;
   }
 
   .slick-next {
     right: 0;
+    padding-right: 15px;
   }
 }
 
@@ -4005,3 +4007,33 @@ body {
     }
   }
 }
+
+/*================ Portfolio Specfic Styles ================*/
+ #shopify-section-portfolio-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  img {
+    width: 215px;
+    z-index: 11;
+    margin-top: 10px;
+  }
+  .social-nav {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 50px;
+    a {
+      z-index: 11;
+      cursor: pointer;
+      transition: .2s ease-out;
+      &:hover {
+        margin-bottom: 5px;
+      }
+    }
+  }
+} 
