pw-portfolio: who even knows

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4037,3 +4037,10 @@ body {
     }
   }
 } 
+
+.hero-slideshow-portfolio hero {
+  .hero__image img {
+    width: auto;
+    height: 100vh;
+  }
+}
