--- a/templates/page.portfolio.liquid
+++ b/templates/page.portfolio.liquid
@@ -1,3 +1,3 @@
 <!-- /templates/page_portfolio.liquid -->
-{% section 'portfolio-overlay' %}
+<!-- {% section 'portfolio-overlay' %} -->
 {% section 'slideshow-portfolio' %}
