--- a/sections/slideshow-portfolio.liquid
+++ b/sections/slideshow-portfolio.liquid
@@ -4,7 +4,7 @@
 
   hero_full_height variable is also available in Header section.
 {% endcomment %}
-{% assign hero_full_height = false %}
+{% assign hero_full_height = true %}
 {% assign hero_parallax = true %}
 
 {% comment %}
