--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -110,7 +110,7 @@
 
     {% unless template.name == "index" %}
       <main class="main-content" role="main">
-        {% unless template == "collection.image" or template.suffix == "home" %}
+        {% unless template == "collection.image" or template.suffix == "home" or template.suffix == "portfolio" %}
           <div class="wrapper">
         {% endunless %}
           {{ content_for_layout }}
