--- a/sections/portfolio-overlay.liquid
+++ b/sections/portfolio-overlay.liquid
@@ -1,5 +1,7 @@
-<img src="{{ 'logo_landing.png' | asset_url }}" />
-<div class="social-nav hide-medium-down">
+<a href="/pages/home">
+	<img src="{{ 'logo_portfolio.png' | asset_url }}" />
+</a>
+<div class="social-nav">
   <a href="https://www.instagram.com/pierceandward/"><i class="fa fa-instagram fa-fw fa-lg" aria-hidden="true"></i></a>
   <a href="https://www.pinterest.com/pierceandwardinteriors/"><i class="fa fa-pinterest-p fa-fw fa-lg" aria-hidden="true"></i></a>
   <a href="mailto:pw@pierceandward.com"><i class="fa fa-envelope-o fa-fw fa-lg" aria-hidden="true"></i></a>
