--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2841,7 +2841,7 @@ $socialIconFontStack: 'icons';
 }
 /*================ Templates | Product Page ================*/
 .product-single {
-  text-align: center;
+  text-align: left;
 }
 
 .product-single__meta--wrapper {
@@ -2860,8 +2860,10 @@ $socialIconFontStack: 'icons';
 
 .product-single__title {
   font-size: em(30px);
-  margin-bottom: $gutter / 2;
+  margin-bottom: 0;
   word-wrap: break-word;
+  font-family: 'Proxima_Nova_Sbold';
+  letter-spacing: .14em;
 
   @include at-query($min, $postSmall) {
     font-size: em(36px);
@@ -2873,8 +2875,15 @@ $socialIconFontStack: 'icons';
 }
 
 .product-single__description {
-  margin-top: 40px;
+  margin-top: 20px;
+  padding: 30px 0;
   text-align: left;
+  font-family: 'Proxima_Nova_Reg';
+  letter-spacing: .05em;
+  text-transform: none;
+  color: #565656;
+  border-top: 2px solid lightgray;
+  border-bottom: 2px solid lightgray;
 }
 
 .product-single__variants {
@@ -2987,10 +2996,11 @@ $socialIconFontStack: 'icons';
 
 .product-single__price,
 .product-single__price--compare-at {
-  @include accentFontStack;
+  font-family: 'Proxima_Nova_Reg';
   color: $colorTextBody;
-  font-size: em(18px);
+  font-size: em(32px);
   font-weight: $headerFontWeight;
+  color: #565656;
 
   &.on-sale {
     color: $colorSaleTag;
