pw-product: rest of product page bones

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4120,3 +4120,18 @@ select::-ms-expand {
 .btn:hover, .btn--secondary:hover, .rte .btn:hover, .rte .btn--secondary:hover {
   background-color: #283904;
 }
+
+.social-sharing {
+  margin-top: 15px;
+  color: #969494;
+}
+
+.social-sharing.clean a {
+  color: #969494;
+}
+
+.social-sharing .share-text {
+  font-family: 'Proxima_Nova_Reg';
+  font-size: em(18px);
+  vertical-align: middle;
+}
