--- a/snippets/social-sharing.liquid
+++ b/snippets/social-sharing.liquid
@@ -2,28 +2,29 @@
 {% assign shareButtonStyle = settings.social_sharing_style %}
 
 <div class="social-sharing {{ shareButtonStyle }}">
-
+  <span class="share-text">SHARE</span>
+  
   {% if settings.share_facebook %}
     <a target="_blank" href="//www.facebook.com/sharer.php?u={{ shop.url | append: share_permalink }}" class="share-facebook" title="{{ 'general.social.alt_text.share_on_facebook' | t }}">
-      <span class="icon icon-facebook" aria-hidden="true"></span>
-      <span class="share-title" aria-hidden="true">{{ 'general.social.share_on_facebook' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_facebook' | t }}</span>
+      <i class="fa fa-facebook fa-fw fa" aria-hidden="true"></i>
     </a>
   {% endif %}
 
   {% if settings.share_twitter %}
     <a target="_blank" href="//twitter.com/share?text={{ share_title | url_param_escape }}&amp;url={{ shop.url | append: share_permalink }}" class="share-twitter" title="{{ 'general.social.alt_text.share_on_twitter' | t }}">
-      <span class="icon icon-twitter" aria-hidden="true"></span>
-      <span class="share-title" aria-hidden="true">{{ 'general.social.share_on_twitter' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_twitter' | t }}</span>
+      <i class="fa fa-twitter fa-fw fa" aria-hidden="true"></i>
     </a>
   {% endif %}
 
   {% if settings.share_pinterest %}
     <a target="_blank" href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}&amp;media={{ share_image | img_url: '1024x1024' }}&amp;description={{ share_title | url_param_escape }}" class="share-pinterest" title="{{ 'general.social.alt_text.share_on_pinterest' | t }}">
-      <span class="icon icon-pinterest" aria-hidden="true"></span>
-      <span class="share-title" aria-hidden="true">{{ 'general.social.share_on_pinterest' | t }}</span>
-      <span class="visually-hidden">{{ 'general.social.alt_text.share_on_pinterest' | t }}</span>
+      <i class="fa fa-pinterest-p fa-fw fa" aria-hidden="true"></i>
+    </a>
+  {% endif %}
+
+  {% if settings.share_email %}
+    <a href="mailto:?subject={{ product.title }} from Pierce and Ward>&body={{ shop.url | append: share_permalink }}&amp;media={{ share_image | img_url: '1024x1024' }}&amp;description={{ share_title | url_param_escape }}">
+      <i class="fa fa-envelope-o fa-fw fa" aria-hidden="true"></i>
     </a>
   {% endif %}
 
