pw-product: complete

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4096,11 +4096,8 @@ select {
   padding: 22px 18px 18px 18px;
   color: #565656;
   border: 1px solid #cfcfcf;
-  -webkit-appearance: none;
-  appearance: none;
-  -moz-appearance: none;
-  text-indent: 1px;
-  text-overflow: '';
+  background-image: url('{{ "down_arrow.png" | asset_url }}');
+  background-position: right 20px center;
 }
 
 select::-ms-expand {
@@ -4134,4 +4131,24 @@ select::-ms-expand {
   font-family: 'Proxima_Nova_Reg';
   font-size: em(18px);
   vertical-align: middle;
+}
+
+.product-content-wrapper {
+  border-bottom: 1px solid #282904;
+  padding-bottom: 20px;
+  margin-bottom: 30px;
+}
+
+#shopify-section-instafeed {
+  margin-left: -30px;
+  margin-right: -30px;
+  h2 {
+    font-family: 'Proxima_Nova_Reg';
+    color: #282904;
+  }
+}
+
+/*hide arrows*/
+.enapAction {
+  display: none !important;
 }
