--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -4,6 +4,7 @@
 {% endcomment %}
 
 {% section 'product-template' %}
+{% section 'instafeed' %}
 
 <script>
   // Override default values of shop.strings for each template.
