pw-develop wednesday todos

--- a/assets/pw.js.liquid
+++ b/assets/pw.js.liquid
@@ -66,6 +66,10 @@ var myAppJavaScript = function($){
   $('.muted-overlay').click(function() {
     window.location.href = "/pages/home";
   });
+
+  $('#en_insta_feeds').click(function() {
+    window.location = "https://www.instagram.com/pierceandward/";
+  })
 };
 
 /* If jQuery has not yet been loaded or if it has but it's too old for our needs,
