pw-about: playing with sections

--- a/templates/page.portfolio.liquid
+++ b/templates/page.portfolio.liquid
@@ -1,3 +1,4 @@
 <!-- /templates/page_portfolio.liquid -->
 {% section 'portfolio-overlay' %}
+{% section 'hero-image' %}
 {% section 'slideshow-portfolio' %}
