pw-about: everythign but some footer polish"

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4185,3 +4185,87 @@ select::-ms-expand {
 .enapAction {
   display: none !important;
 }
+
+/*================ About Page Styles ================*/
+#shopify-section-about-hero-image {
+  img {
+    width: 100%;
+  }
+}
+
+#about {
+  h2 {
+    font-family: 'Proxima_Nova_Sbold';
+    color: #323131;
+  }
+  hr {
+    border-color: #323131;
+  }
+  .center-hr {
+    margin: 0 auto;
+  }
+  .short-hr {
+    border-width: 3px 0 0 0;
+  }
+  .full-hr {
+    width: 100%;
+    border-width: 2px 0 0 0;
+    margin: 65px 0;
+  }
+}
+
+.about-page-title {
+  max-width: 90%;
+  margin: 30px auto;
+}
+
+.title-main {
+  text-align: center;
+}
+
+#shopify-section-about-text {
+  max-width: 90%;
+  margin: 0 auto;
+  font-family: 'Proxima_Nova_Reg';
+  text-transform: none;
+  color: #565656;
+}
+
+#shopify-section-about-clients {
+  max-width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  .client {
+    flex: 1 0 25%;
+    font-family: 'Proxima_Nova_Reg';
+    text-transform: none;
+    padding: 10px 0;
+  }
+}
+
+#shopify-section-about-quote {
+  max-width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.quote-wrapper {
+  width: 60%;
+  text-align: center;
+}
+
+.quotation-marks p {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 100px;
+}
+
+.contact-wrapper {
+  width: 30%;
+}
+
+.about-footer {
+  margin: 0 -30px;
+  background-color: red;
+}
