--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -118,7 +118,7 @@
           </div>
         {% endunless %}
       </main>
-      {% unless template.suffix == "home" or template.suffix == "portfolio"  or template.name == "product" %}
+      {% unless template.suffix == "home" or template.suffix == "portfolio"  or template.name == "product" or template.suffix == "about" %}
         <hr class="hr--large">
         {% section 'footer' %}
       {% endunless %}
