--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -94,7 +94,7 @@
               <a href="{{ link.url }}" class="site-nav__link">Press</a>
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
-              <a href="{{ link.url }}" class="site-nav__link">About</a>
+              <a href="/pages/about" class="site-nav__link">About</a>
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%} hide-medium-up">
               <a href="/cart" class="site-nav__link site-nav__link--icon cart-link js-drawer-open-right" aria-controls="CartDrawer" aria-expanded="false">
