pw-about: rest of about page pre-polish

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4236,6 +4236,7 @@ select::-ms-expand {
   margin: 0 auto;
   display: flex;
   flex-flow: row wrap;
+  padding-bottom: 50px;
   .client {
     flex: 1 0 25%;
     font-family: 'Proxima_Nova_Reg';
@@ -4249,6 +4250,9 @@ select::-ms-expand {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding-bottom: 25px;
+  font-family: 'Proxima_Nova_Reg';
 }
 
 .quote-wrapper {
@@ -4256,16 +4260,33 @@ select::-ms-expand {
   text-align: center;
 }
 
-.quotation-marks p {
-  font-family: 'Libre Baskerville', serif;
-  font-size: 100px;
+.quote-text {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.quotation-marks {
+  margin-bottom: -75px;
+  p {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 100px;
+  }
 }
 
 .contact-wrapper {
   width: 30%;
+  text-align: center;
 }
 
 .about-footer {
+  color: #ffffff;
   margin: 0 -30px;
-  background-color: red;
+  background-color: #282903;
+  a {
+    color: #ffffff;
+  }
+  .fa-envelope-o {
+    display: block;
+    padding-bottom: 20px;
+  }
 }
