--- a/sections/list-collections-template.liquid
+++ b/sections/list-collections-template.liquid
@@ -10,7 +10,7 @@
 {% endcomment %}
 
 <header class="section-header text-center">
-  <h1>{{ 'collections.general.catalog_title' | t }}</h1>
+  <h1>Shop</h1>
   <hr class="hr--small">
 </header>
 
