--- a/sections/about-quote.liquid
+++ b/sections/about-quote.liquid
@@ -2,10 +2,12 @@
   <div class="quotation-marks">
     <p>“ ”</p>
   </div>
-  {{ section.settings.about-quote }}
+  <div class="quote-text">
+    {{ section.settings.about-quote }}
+  </div>
 </div>
 <div class="contact-wrapper">
-  <i class="fa fa-envelope-o" aria-hidden="true"></i>
+  <i class="fa fa-envelope-o fa-3x" aria-hidden="true"></i>
   <a href="mailto:info@pierceandward.com">info@pierceandward.com</a>
 </div>
 
