--- a/sections/list-collections-template.liquid
+++ b/sections/list-collections-template.liquid
@@ -11,7 +11,7 @@
 
 <header class="section-header text-center">
   <h1>Shop</h1>
-  <hr class="hr--small">
+  <hr class="short-hr">
 </header>
 
 {%- assign collection_count = 0 -%}
@@ -107,7 +107,7 @@
         "type": "radio",
         "id": "display_type",
         "label": "Select collections to show",
-        "default": "all",
+        "default": "selected",
         "options": [
           {
             "value": "all",
