--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -48,18 +48,49 @@
         {% else %}
           {% include 'image-style' with image: product.featured_image, small_style: true, width: width, height: height, wrapper_id: img_wrapper_id, img_id_class: img_id_class %}
           <div id="{{ img_wrapper_id }}" class="product--wrapper">
-            <div style="padding-top:{{ 1 | divided_by: product.featured_image.aspect_ratio | times: 100 }}%;">
-              <img class="product--image lazyload {{ img_id_class }}"
+            <div class="background-pillow" 
+              {% if product.images[1] %} 
+                style="padding-top:{{ 1 | divided_by: product.featured_image.aspect_ratio | times: 100 }}%; background-image: url('{{ product.images[1] | img_url: '2048x' }}');"
+              {% else %}
+                style="padding-top:{{ 1 | divided_by: product.featured_image.aspect_ratio | times: 100 }}%; background-color: #c69e6a;"
+                {% endif %}
+                >
+              <img class="product--image product-image--featured lazyload {{ img_id_class }}"
                    src="{{ product.featured_image | img_url: '150x150' }}"
                    data-src="{{ img_url }}"
                    data-widths="[180, 370, 590, 740, 900, 1080, 1296, 1512, 1728, 2048]"
                    data-aspectratio="{{ product.featured_image.aspect_ratio }}"
                    data-sizes="auto"
-                   alt="{{ product.featured_image.alt | escape }}">
+                   alt="{{ product.images[1].alt | escape }}">
+              <div class="product-info-wrapper">
+                <span class="grid-product__title">{{ product.title }}</span>
+                <span class="grid-product__price-wrap">
+                  <span class="grid-product__price">
+                    {% if on_sale %}
+                      <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
+                    {% else %}
+                       <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
+                    {% endif %}
+                    {% if product.price_varies %}
+                      {{ product.price_min | money_without_trailing_zeros }}
+                      <span class="icon-fallback-text">
+                        <span class="icon icon-plus grid-product__price-min" aria-hidden="true"></span>
+                        <span class="fallback-text">+</span>
+                      </span>
+                    {% else %}
+                      {{ product.price | money_without_trailing_zeros }}
+                    {% endif %}
+                  </span>
+                </span>
+                {% if section.settings.product_vendor_enable %}
+                  <p class="grid-product__vendor">{{ product.vendor }}</p>
+                {% endif %}
+              </div>
             </div>
           </div>
           <noscript>
             <img class="grid-product__image" src="{{ product.featured_image.src | img_url: '1024x' }}" alt="{{ product.featured_image.alt | escape }}">
+            <img class="grid-product__image" src="{{ product.images[1].src | img_url: '1024x' }}" alt="{{ product.images[1].alt | escape }}">
           </noscript>
         {% endif %}
       </a>
@@ -74,31 +105,5 @@
         </div>
       {% endif %}
     </div>
-
-    <a href="{{ product.url | within: collection }}" class="grid-product__meta">
-      <span class="grid-product__title">{{ product.title }}</span>
-      <span class="grid-product__price-wrap">
-        <span class="long-dash">—</span>
-        <span class="grid-product__price">
-          {% if on_sale %}
-            <span class="visually-hidden">{{ 'products.general.sale_price' | t }}</span>
-          {% else %}
-             <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
-          {% endif %}
-          {% if product.price_varies %}
-            {{ product.price_min | money_without_trailing_zeros }}
-            <span class="icon-fallback-text">
-              <span class="icon icon-plus grid-product__price-min" aria-hidden="true"></span>
-              <span class="fallback-text">+</span>
-            </span>
-          {% else %}
-            {{ product.price | money_without_trailing_zeros }}
-          {% endif %}
-        </span>
-      </span>
-      {% if section.settings.product_vendor_enable %}
-        <p class="grid-product__vendor">{{ product.vendor }}</p>
-      {% endif %}
-    </a>
   </div>
 </div>
