--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -80,7 +80,7 @@
               <a href="/pages/portfolio" class="site-nav__link">Portfolio</a>
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
-              <a href="/collections/shop" class="site-nav__link">Shop</a>
+              <a href="/collections/shop/pillows" class="site-nav__link">Shop</a>
             </li>
             <li class="logo desktop-logo site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
