--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -1,13 +1,17 @@
 <!-- /snippets/pagination.liquid -->
 {% capture previous_label %}
   <span class="icon-fallback-text">
-    <span class="icon icon-arrow-left" aria-hidden="true"></span>
+    <span class="icon icon-arrow-left" aria-hidden="true">
+    	<i class="fa fa-angle-left" aria-hidden="true"></i>
+		</span>
     <span class="fallback-text">{{ 'general.pagination.previous' | t }}</span>
   </span>
 {% endcapture %}
 {% capture next_label %}
   <span class="icon-fallback-text">
-    <span class="icon icon-arrow-right" aria-hidden="true"></span>
+    <span class="icon icon-arrow-right" aria-hidden="true">
+    	<i class="fa fa-angle-right" aria-hidden="true"></i>
+    </span>
     <span class="fallback-text">{{ 'general.pagination.next' | t }}</span>
   </span>
 {% endcapture %}
