--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -77,6 +77,31 @@
 /*============================================================================
   #Sass Mixins
 ==============================================================================*/
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
+  > .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
+
+.sixteen-nine {
+  @include aspect-ratio(16, 9);
+}
+
+.one-one {
+  @include aspect-ratio(1, 1);
+}
+
 .clearfix {
   &:after {
     content: '';
@@ -4396,5 +4421,74 @@ select::-ms-expand {
     font: 'Proxima_Nova_Sbold';
     font-weight: 600;
     color: #ffffff;
+  }
+}
+
+/*================ Press Page Styles ================*/
+#shopify-section-press-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.press-item {
+  width: 33%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  padding-bottom: 5px;
+  @include at-query($max, $medium) {
+    width: 49%;
+  }
+  @include at-query($max, $small) {
+    width: 100%;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+    @include transition(opacity 0.2s);
+  }
+}
+
+.press-item:hover {
+  img {
+    opacity: .5;
+  }
+  .press-content {
+    opacity: 1;
+  }
+}
+
+.press-content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #282904;
+  opacity: 0;
+  @include transition(opacity 0.2s);
+  @include at-query($max, $medium) {
+    opacity: 1;
+    background-color: #ffffff;
+    width: 75%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  h3 {
+    font-family: 'Proxima_Nova_Sbold';
+  }
+  p {
+    font-family: 'Proxima_Nova_Reg';
+    font-style: italic;
+  }
+  a {
+    font-family: 'Proxima_Nova_Reg';
+    background-color: #282904;
+    color: #ffffff;
+    padding: 10px 30px;
   }
 }
