--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -154,7 +154,7 @@
                 {% assign cartTotalDiscounts = cart.total_discounts | money %}
                 <p class="cart__savings">{{ 'cart.general.savings_html' | t: savings: cartTotalDiscounts }}</p>
               {% endif %}
-              <p><em>{{ 'cart.general.shipping_at_checkout' | t }}</em></p>
+              <p class="ajaxcart__note">{{ 'cart.general.shipping_at_checkout' | t }}</p>
               <button type="submit" name="update" class="btn--secondary update-cart">{{ 'cart.general.update' | t }}</button>
               <button type="submit" name="checkout" class="btn cart__checkout">
                 {{ 'cart.general.checkout' | t }} <span class="icon icon-arrow-right" aria-hidden="true"></span>
