develop: about tweaks

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -91,7 +91,7 @@
               </h1>
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
-              <a href="/pages/press" class="site-nav__link">Press</a>
+              <a href="/blogs/press" class="site-nav__link">Press</a>
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
               <a href="/pages/about" class="site-nav__link">About</a>
