--- a/sections/about-hero-image.liquid
+++ b/sections/about-hero-image.liquid
@@ -1,4 +1,4 @@
-<img src="{{ section.settings.hero-image-about | img_url: '1030x436', crop: 'bottom' }}" alt="{{ section.settings.hero-image-about.alt | default: shop.name }}" >
+<img src="{{ section.settings.hero-image-about | img_url: '2000', crop: 'bottom' }}" alt="{{ section.settings.hero-image-about.alt | default: shop.name }}" >
 
 {% schema %}
   {
