develop:caitlin requests

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4142,8 +4142,10 @@ body,
     }
     a {
       padding: 0 10px;
+      @include transition(all 0.2s);
       &:hover {
         margin-bottom: 0;
+        color: #c69e6a;
       }
     }
   }
