--- a/sections/portfolio-overlay.liquid
+++ b/sections/portfolio-overlay.liquid
@@ -9,7 +9,7 @@
   <div class="social-nav-center">
 	  <a href="https://www.instagram.com/pierceandward/"><i class="fa fa-instagram fa-fw fa-lg" aria-hidden="true"></i></a>
 	  <a href="https://www.pinterest.com/pierceandwardinteriors/"><i class="fa fa-pinterest-p fa-fw fa-lg" aria-hidden="true"></i></a>
-	  <a href="mailto:pw@pierceandward.com"><i class="fa fa-envelope-o fa-fw fa-lg" aria-hidden="true"></i></a>
+	  <a href="mailto:inquiries@pierceandward.com"><i class="fa fa-envelope-o fa-fw fa-lg" aria-hidden="true"></i></a>
 	</div>
 		<div class="social-nav-side">
 	  <a href="/blogs/press" class="site-nav__link">Press</a>
