--- a/templates/blog.liquid
+++ b/templates/blog.liquid
@@ -2,9 +2,7 @@
 {% paginate blog.articles by 6 %}
 
 <div class="shopify-section-press">
-
-  
-
+    
     {% for article in blog.articles %}
 
       {% assign article_content = article.excerpt_or_content %}
@@ -16,7 +14,7 @@
           <div class="article__featured-image-wrapper" style="padding-top:{{ 1 | divided_by: article.image.aspect_ratio | times: 100}}%;">
             {% assign img_url = article.image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' %}
             <img class="article__featured-image lazyload"
-              src="{{ article.image | img_url: '300x300' }}"
+              src="{{ article.image | img_url: '300x300', crop: 'center' }}"
               data-src="{{ img_url }}"
               data-widths="[360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
               data-aspectratio="{{ article.image.aspect_ratio }}"
