caitling feedback round 2

--- a/assets/pw.js.liquid
+++ b/assets/pw.js.liquid
@@ -67,6 +67,11 @@ var myAppJavaScript = function($){
     window.location.href = "/pages/home";
   });
 
+  $('#shopify-section-branded-overlay img').click(function() {
+    console.log('getting here');
+    window.location.href = "/pages/home";
+  });
+
   $('#en_insta_feeds').click(function() {
     window.location = "https://www.instagram.com/pierceandward/";
   })
