--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4048,6 +4048,7 @@ body,
     width: 215px;
     z-index: 11;
     margin-top: 30px;
+    cursor: pointer;
     @include at-query($max, $small) {
       width: 160px;
     }
