--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -58,9 +58,9 @@
       <div class="wrapper">
         <div class="nav-wrapper desktop-nav-wrapper">
           <div class="list-group social-nav hide-medium-down">
-            <a class="list-group-item" href="#"><i class="fa fa-instagram fa-fw fa-nav" aria-hidden="true"></i></a>
-            <a class="list-group-item" href="#"><i class="fa fa-pinterest-p fa-fw fa-nav" aria-hidden="true"></i></a>
-            <a class="list-group-item" href="#"><i class="fa fa-envelope-o fa-fw fa-nav" aria-hidden="true"></i></a>
+            <a class="list-group-item" href="https://www.instagram.com/pierceandward/"><i class="fa fa-instagram fa-fw fa-nav" aria-hidden="true"></i></a>
+            <a class="list-group-item" href="https://www.pinterest.com/pierceandwardinteriors/"><i class="fa fa-pinterest-p fa-fw fa-nav" aria-hidden="true"></i></a>
+            <a class="list-group-item" href="mailto:inquiries@pierceandward.com"><i class="fa fa-envelope-o fa-fw fa-nav" aria-hidden="true"></i></a>
           </div>
           <!-- begin main-nav -->
           <div class="nav-trigger">
@@ -103,9 +103,9 @@
             </li>
             <li class="site-nav__item site-nav__expanded-item{% unless template.name == 'index' %}{% if link.active %} site-nav--active{% endif %}{% endunless%}">
               <div class="list-group social-nav mobile-social-nav">
-                <a class="list-group-item" href="#"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
-                <a class="list-group-item" href="#"><i class="fa fa-pinterest-p fa-fw" aria-hidden="true"></i></a>
-                <a class="list-group-item" href="#"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></a>
+                <a class="list-group-item" href="https://www.instagram.com/pierceandward/"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></a>
+                <a class="list-group-item" href="https://www.pinterest.com/pierceandwardinteriors/"><i class="fa fa-pinterest-p fa-fw" aria-hidden="true"></i></a>
+                <a class="list-group-item" href="mailto:inquiries@pierceandward.com"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></a>
               </div>
             </li>
           </ul>
