--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2154,6 +2154,7 @@ $shareCountBg: $colorBody;
     height: 100%;
     margin-top: 0;
     width: 40px;
+    z-index: 12;
   }
 
   .slick-prev {
@@ -3932,7 +3933,7 @@ body {
     padding: 0 3px;
     @include transition(opacity 0.2s);
     &:hover {
-      color: #c69e6a;
+      color: #C0F500;
     }
   }
 }
@@ -3957,7 +3958,7 @@ body {
     letter-spacing: .14em;
     @include transition(opacity 0.2s);
     &:hover {
-      color: #c69e6a;
+      color: #C0F500;
     }
   }
 }
@@ -4000,7 +4001,7 @@ body {
 }
 
 .site-nav__link:hover {
-  color: #c69e6a;
+  color: #C0F500;
 }
 /*================ Helpers ================*/
 .hide-medium-down {
@@ -4146,7 +4147,7 @@ body,
       @include transition(all 0.2s);
       &:hover {
         margin-bottom: 0;
-        color: #c69e6a;
+        color: #C0F500;
       }
     }
   }
@@ -4160,7 +4161,7 @@ body,
 
 #portfolio .hero--full-height .hero__image {
     height: 100%;
-    width: auto;
+    width: 100%;
     object-fit: cover;
     object-position: 50% 50%;
     margin: 0 auto;
@@ -4454,11 +4455,10 @@ select::-ms-expand {
   font-family: 'Proxima_Nova_Reg';
   font-weight: 200;
   font-size: 18px;
-  background-color: #282903;
   margin: 0 -30px;
   padding: 30px 0;
   a {
-    color: #ffffff;
+    color: #282903;
   }
   .page.current {
     font: 'Proxima_Nova_Sbold';
@@ -4588,6 +4588,6 @@ select::-ms-expand {
 .cart--continue-browsing a {
   color: #282904;
   &:hover {
-    color: #c69e6a;
+    color: #C0F500;
   }
 }
