--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -3933,7 +3933,7 @@ body {
     padding: 0 3px;
     @include transition(opacity 0.2s);
     &:hover {
-      color: #C0F500;
+      color: #7B7F32;
     }
   }
 }
@@ -3958,7 +3958,7 @@ body {
     letter-spacing: .14em;
     @include transition(opacity 0.2s);
     &:hover {
-      color: #C0F500;
+      color: #7B7F32;
     }
   }
 }
@@ -4001,7 +4001,7 @@ body {
 }
 
 .site-nav__link:hover {
-  color: #C0F500;
+  color: #7B7F32;
 }
 /*================ Helpers ================*/
 .hide-medium-down {
@@ -4147,7 +4147,7 @@ body,
       @include transition(all 0.2s);
       &:hover {
         margin-bottom: 0;
-        color: #C0F500;
+        color: #7B7F32;
       }
     }
   }
@@ -4401,6 +4401,13 @@ select::-ms-expand {
 
 .tags--collection li a {
   color: #ffffff;
+  &:hover {
+    color: #7B7F32;
+  }
+}
+
+.tags--collection .tag--active a {
+  color: #7B7F32;
 }
 
 .background-pillow:hover {
@@ -4588,6 +4595,6 @@ select::-ms-expand {
 .cart--continue-browsing a {
   color: #282904;
   &:hover {
-    color: #C0F500;
+    color: #7B7F32;
   }
 }
