--- a/sections/about-quote.liquid
+++ b/sections/about-quote.liquid
@@ -8,7 +8,7 @@
 </div>
 <div class="contact-wrapper">
   <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
-  <a href="mailto:info@pierceandward.com">info@pierceandward.com</a>
+  <a href="mailto:inquiries@pierceandward.com">inquiries@pierceandward.com</a>
 </div>
 
 {% schema %}
