tweaking button color

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4598,3 +4598,7 @@ select::-ms-expand {
     color: #7B7F32;
   }
 }
+
+.btn:hover, .btn--secondary:hover, .rte .btn:hover, .rte .btn--secondary:hover {
+  background-color: #7B7F32;
+}
