pw:develop - return to original slider with image sizes kept in tact and switch background of portfolio to black

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4161,14 +4161,14 @@ body,
 
 #portfolio .hero--full-height .hero__image {
     height: 100%;
-    width: 100%;
+    width: auto;
     object-fit: cover;
     object-position: 50% 50%;
     margin: 0 auto;
 }
 
 #portfolio .hero__slide.is-dark {
-  background-color: #282904;
+  background-color: #000000;
 }
 
 /*================ Product Page Styles ================*/
